# Non-Linear-Cardiac-Mechanics

./: .gitignore  CMakeLists.txt  LICENSE  README.md  utility_guccione.py
geometry/beam/: beam_02.geo  beam_05.geo
geometry/ventricle/: ventricle_0_3.geo  ventricle_0_5.geo
mesh/: beam_01.geo  beam_01.msh  beam_02.msh  beam_05.msh
scripts/: generate_meshes.sh  graphs.py
src/: Poisson.hpp  cardiac_solver.hpp  constants.hpp  left_ventricle.cpp  left_ventricle.hpp  lv_base.cpp  lv_base.hpp  main.cpp  main_beam.cpp  main_guccione.cpp  main_holzapfel.cpp  main_neohooke.cpp  material_model.hpp  tensor_utils.cpp  tensor_utils.hpp
src/cardiac/: Poisson.cpp  Poisson.hpp  fiber_field.hpp  fibers_analytical.hpp  fibers_laplace.hpp  fibers_trivial.hpp  lv.cpp  lv.hpp  lv_base.cpp  lv_base.hpp  strain_energy.hpp  strain_energy_guccione.cpp  strain_energy_guccione.hpp  strain_energy_holzapfel.cpp  strain_energy_holzapfel.hpp  strain_energy_neohooke.cpp  strain_energy_neohooke.hpp  system_assembler.cpp  system_assembler.hpp  tensor_utils.cpp  tensor_utils.hpp
src/guccione/: common.hpp  left_ventricle.cpp  left_ventricle.hpp  main.cpp  system_assembler.hpp  tensor_utils.cpp  tensor_utils.hpp
src/holzapfel/: left_ventricle.cpp  left_ventricle.hpp  main.cpp  tensor_utils.cpp  tensor_utils.hpp
ventricular_meshes/geo/: ventricle_0_7.geo  ventricle_0_99.geo
ventricular_meshes/msh/: ventricle_0_3.msh
